force-app/main/default/objects/NCMT_Building_Height_Parameter__c/NCMT_Building_Height_Parameter__c.object-meta.xml
<CustomObject>
    <description>NCMT Building Height Parameters</description>
    <label>Building Height Parameter</label>
    <nameField>
        <label>Building Height Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building Height Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>