force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Air_Handling_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Air_Handling_Capacity__c</fullName>
    <label>Air Handling Capacity</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>