force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Atrium__c.field-meta.xml
<CustomField>
    <fullName>Atrium__c</fullName>
    <description>Atrium</description>
    <inlineHelpText>Atrium</inlineHelpText>
    <label>Atrium</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>