force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Bast_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Bast_Ratio__c</fullName>
    <description>Bast Ratio</description>
    <inlineHelpText>Bast Ratio</inlineHelpText>
    <label>Bast Ratio</label>
    <precision>18</precision>
    <scale>17</scale>
    <type>Number</type>
</CustomField>