force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Bay_Area__c.field-meta.xml
<CustomField>
    <fullName>Bay_Area__c</fullName>
    <label>Bay Area</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>