force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Bracing__c.field-meta.xml
<CustomField>
    <fullName>Bracing__c</fullName>
    <description>Bracing</description>
    <inlineHelpText>Bracing</inlineHelpText>
    <label>Bracing</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>