force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Building_Height__c.field-meta.xml
<CustomField>
    <fullName>Building_Height__c</fullName>
    <description>Building Height</description>
    <inlineHelpText>Building Height</inlineHelpText>
    <label>Building Height</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single story</fullName>
            </value>
            <value>
                <fullName>Lowrise (2 - 3 stories)</fullName>
            </value>
            <value>
                <fullName>Midrise (4 - 9 stories)</fullName>
            </value>
            <value>
                <fullName>Highrise (10 + stories)</fullName>
            </value>
            <value>
                <fullName>1 story, high bay, light structure</fullName>
            </value>
            <value>
                <fullName>1 story, high bay, industrial</fullName>
            </value>
            <value>
                <fullName>1 story, low bay, light structure</fullName>
            </value>
            <value>
                <fullName>1 story, low bay, conventional (office like)</fullName>
            </value>
            <value>
                <fullName>Multi-story, low bay, conventional</fullName>
            </value>
            <value>
                <fullName>Multi-story, high bay, industrial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>