force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Col_C_S__c.field-meta.xml
<CustomField>
    <fullName>Col_C_S__c</fullName>
    <description>Col C/S</description>
    <inlineHelpText>Col C/S</inlineHelpText>
    <label>Col C/S</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>