force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Col_fmk__c.field-meta.xml
<CustomField>
    <fullName>Col_fmk__c</fullName>
    <description>Col fmk</description>
    <inlineHelpText>Col fmk</inlineHelpText>
    <label>Col fmk</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>