force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Columns__c.field-meta.xml
<CustomField>
    <fullName>Columns__c</fullName>
    <description>Columns</description>
    <inlineHelpText>Columns</inlineHelpText>
    <label>Columns</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>