force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Dead_Load__c.field-meta.xml
<CustomField>
    <fullName>Dead_Load__c</fullName>
    <label>Dead Load</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>