force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Deck_FP__c.field-meta.xml
<CustomField>
    <fullName>Deck_FP__c</fullName>
    <description>Deck FP</description>
    <inlineHelpText>Deck FP</inlineHelpText>
    <label>Deck FP</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>