force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/FAR_Description__c.field-meta.xml
<CustomField>
    <fullName>FAR_Description__c</fullName>
    <description>FAR Description</description>
    <inlineHelpText>FAR Description</inlineHelpText>
    <label>FAR Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>