force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Glazing__c.field-meta.xml
<CustomField>
    <fullName>Glazing__c</fullName>
    <label>Glazing</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>