force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/GSF_100000__c.field-meta.xml
<CustomField>
    <fullName>GSF_100000__c</fullName>
    <description>GSF 100000</description>
    <inlineHelpText>GSF 100000</inlineHelpText>
    <label>GSF 100,000</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>