force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/GSF_150000__c.field-meta.xml
<CustomField>
    <fullName>GSF_150000__c</fullName>
    <description>GSF 150000</description>
    <inlineHelpText>GSF 150000</inlineHelpText>
    <label>GSF 150,000</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>