force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/GSF_250000__c.field-meta.xml
<CustomField>
    <fullName>GSF_250000__c</fullName>
    <description>GSF 250000</description>
    <inlineHelpText>GSF 250000</inlineHelpText>
    <label>GSF 250,000</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>