force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/GSF_GT_500000__c.field-meta.xml
<CustomField>
    <fullName>GSF_GT_500000__c</fullName>
    <description>GSF &gt; 500000</description>
    <inlineHelpText>GSF &gt; 500000</inlineHelpText>
    <label>GSF &gt; 500,000</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>