force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Horiz_Steel__c.field-meta.xml
<CustomField>
    <fullName>Horiz_Steel__c</fullName>
    <description>Horizontal Steel</description>
    <inlineHelpText>Horizontal Steel</inlineHelpText>
    <label>Horiz Steel</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>