force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Mid_Canopy__c.field-meta.xml
<CustomField>
    <fullName>Mid_Canopy__c</fullName>
    <description>Mid Canopy</description>
    <inlineHelpText>Mid Canopy</inlineHelpText>
    <label>Mid Canopy</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>