force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/No_of_Floors__c.field-meta.xml
<CustomField>
    <fullName>No_of_Floors__c</fullName>
    <description>No of Floors</description>
    <inlineHelpText>No of Floors</inlineHelpText>
    <label>No of Floors</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>