force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Plumbing_Fixtures__c.field-meta.xml
<CustomField>
    <fullName>Plumbing_Fixtures__c</fullName>
    <description>Plumbing Fixtures</description>
    <label>Plumbing Fixtures</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>