force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Remote__c.field-meta.xml
<CustomField>
    <fullName>Remote__c</fullName>
    <description>NCMT Remote</description>
    <label>Remote</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>