force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Rural__c.field-meta.xml
<CustomField>
    <fullName>Rural__c</fullName>
    <description>NCMT Rural</description>
    <label>Rural</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>