force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Skin__c.field-meta.xml
<CustomField>
    <fullName>Skin__c</fullName>
    <label>Skin</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>