force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Slab_Thickness__c.field-meta.xml
<CustomField>
    <fullName>Slab_Thickness__c</fullName>
    <description>Slab Thickness</description>
    <inlineHelpText>Slab Thickness</inlineHelpText>
    <label>Slab Thickness</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>