force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Steel_FP__c.field-meta.xml
<CustomField>
    <fullName>Steel_FP__c</fullName>
    <description>Steel FP</description>
    <inlineHelpText>Steel FP</inlineHelpText>
    <label>Steel FP</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>