force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Story_Ht__c.field-meta.xml
<CustomField>
    <fullName>Story_Ht__c</fullName>
    <description>Story Ht for Utility</description>
    <label>Story Height</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>