force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/SW_thickness__c.field-meta.xml
<CustomField>
    <fullName>SW_thickness__c</fullName>
    <description>SW thickness</description>
    <inlineHelpText>SW thickness</inlineHelpText>
    <label>SW thickness</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>