force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Urban__c.field-meta.xml
<CustomField>
    <fullName>Urban__c</fullName>
    <description>NCMT Urban</description>
    <label>Urban</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>