force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/USF_100000__c.field-meta.xml
<CustomField>
    <fullName>USF_100000__c</fullName>
    <description>USF 100000</description>
    <inlineHelpText>USF 100000</inlineHelpText>
    <label>USF 100,000</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>