force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/USF_10000__c.field-meta.xml
<CustomField>
    <fullName>USF_10000__c</fullName>
    <description>USF 10000</description>
    <inlineHelpText>USF 10000</inlineHelpText>
    <label>USF 10,000</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>