force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/USF_150000__c.field-meta.xml
<CustomField>
    <fullName>USF_150000__c</fullName>
    <description>USF 150000</description>
    <inlineHelpText>USF 150000</inlineHelpText>
    <label>USF 150,000</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>