force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/USF_GT_500000__c.field-meta.xml
<CustomField>
    <fullName>USF_GT_500000__c</fullName>
    <description>USF &gt; 500000</description>
    <inlineHelpText>USF &gt; 500000</inlineHelpText>
    <label>USF &gt; 500,000</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>