force-app/main/default/objects/NCMT_Building_Height_Parameter__c/fields/Very_Remote__c.field-meta.xml
<CustomField>
    <fullName>Very_Remote__c</fullName>
    <description>NCMT Very Remote</description>
    <label>Very Remote</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>