force-app/main/default/objects/NCMT_Building_Height_Parameter__c/recordTypes/Childcare_Center.recordType-meta.xml
<RecordType>
    <fullName>Childcare_Center</fullName>
    <active>true</active>
    <description>Stand-alone single story childcare center, including associated site</description>
    <label>Childcare Center</label>
</RecordType>