force-app/main/default/objects/NCMT_Building_Height_Parameter__c/recordTypes/Courthouse.recordType-meta.xml
<RecordType>
    <fullName>Courthouse</fullName>
    <active>true</active>
    <description>Federal Courthouse</description>
    <label>Courthouse</label>
</RecordType>