force-app/main/default/objects/NCMT_Building_Height_Parameter__c/recordTypes/Data_Center.recordType-meta.xml
<RecordType>
    <fullName>Data_Center</fullName>
    <active>true</active>
    <description>Dedicated Data Center</description>
    <label>Data Center</label>
</RecordType>