force-app/main/default/objects/NCMT_Building_Height_Parameter__c/recordTypes/Laboratory_Dry.recordType-meta.xml
<RecordType>
    <fullName>Laboratory_Dry</fullName>
    <active>true</active>
    <description>Research laboratory to house dry research sciences</description>
    <label>Laboratory: Dry</label>
</RecordType>