force-app/main/default/objects/NCMT_Building_Height_Parameter__c/recordTypes/Laboratory_Wet.recordType-meta.xml
<RecordType>
    <fullName>Laboratory_Wet</fullName>
    <active>true</active>
    <description>Research laboratory to house wet research sciences</description>
    <label>Laboratory: Wet</label>
</RecordType>