force-app/main/default/objects/NCMT_Building_Height_Parameter__c/recordTypes/Land_Port_of_Entry.recordType-meta.xml
<RecordType>
    <fullName>Land_Port_of_Entry</fullName>
    <active>true</active>
    <description>Land Port of Entry</description>
    <label>Land Port of Entry</label>
</RecordType>