force-app/main/default/objects/NCMT_Building_Height_Parameter__c/recordTypes/Medical_Clinic.recordType-meta.xml
<RecordType>
    <fullName>Medical_Clinic</fullName>
    <active>true</active>
    <description>Medical Clinic (I Occupancy), stand-alone or associated with a hospital complex to provide Medical Offices and same-day surgery</description>
    <label>Medical Clinic</label>
</RecordType>