force-app/main/default/objects/NCMT_Building_Height_Parameter__c/recordTypes/Office.recordType-meta.xml
<RecordType>
    <fullName>Office</fullName>
    <active>true</active>
    <description>Federal Office Building</description>
    <label>Office</label>
</RecordType>