force-app/main/default/objects/NCMT_Building_Height_Parameter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Building_Height__c</columns>
    <columns>No_of_Floors__c</columns>
    <columns>Building_Parameter__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>